admin panel javab takalif va upload takalif

--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -62,9 +62,11 @@
     <ul class="navbar-nav mr-auto-navbav">
       <!-- Messages Dropdown Menu -->
       <li class="nav-item dropdown">
-        
-          <a href="{% url 'account:logout' %}" class="dropdown-item">
-            logout       
+        <a class="nav-link" data-toggle="dropdown" href="{% url 'account:logout' %}">
+
+        <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
+          <a href="" class="dropdown-item">
+            logout
           </a>
 
 
@@ -153,6 +155,12 @@
                 <a href="{% url 'account:create-tklif' %}" class="nav-link">
                   <i class="fa fa-edit"></i>
                   <p>افزودن تکلیف</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="{% url 'account:tklif-answer-admin' %}" class="nav-link">
+                  <i class="fa fa-list"></i>
+                  <p>جواب تمرین ها</p>
                 </a>
               </li>
             </ul>
