--- a/templates/learning/TklifList.html
+++ b/templates/learning/TklifList.html
@@ -3,6 +3,7 @@
 	{{tklif.title}}<br><hr>
 	{{tklif.description}}<br><hr>
 	{{tklif.session_number}}<br><hr>
+	<a href="{% url 'learning:AnswerForm' tklif.pk %}">a</a>
 	<br>
 	<br>
 	<br>
