--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -164,6 +164,32 @@
                 </a>
               </li>
             </ul>
+            {% if user.is_superuser %}
+          <li class="nav-item has-treeview menu-open">
+            <a href="#" class="nav-link active">
+              <i class="nav-icon fas fa-tachometer-alt"></i>
+              <p>
+                دوره اموزشی
+                <i class="right fas fa-angle-left"></i>
+              </p>
+            </a>
+            
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href="{% url 'courseSales:CourseSalesList' %}" class="nav-link active">
+                  <i class="fa fa-list"></i>
+                  <p>لیست دوره اموزشی</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="{% url 'courseSales:CreateCourseSales' %}" class="nav-link">
+                  <i class="fa fa-edit"></i>
+                  <p>افزوردن دوره اموزشی</p>
+                </a>
+              </li>
+            </ul>
+            {% endif %}
+
 
       <!-- /.sidebar-menu -->
     </div>
