--- a/e-learning/templates/account/create-update-tklif.html
+++ b/e-learning/templates/account/create-update-tklif.html
@@ -1,7 +1,7 @@
 {% extends 'account/base.html' %}
 {% load crispy_forms_tags %}
 {% block title %}
-  افزودن|اپدیت مقاله
+  افزودن|اپدیت تکلیف
 {% endblock %}
 
 {% block content %}
