--- a/e-learning/templates/learning/TklifList.html
+++ b/e-learning/templates/learning/TklifList.html
@@ -1,6 +1,9 @@
 {% extends "learning/base.html" %}
 {% load static %}
 
+{% block title %}
+<title>تکلیف</title>
+{% endblock %}
 {% block headerimg %}
 
 <img class="img-fluid" src="{% static 'pic/pexels-pixabay-301920.jpg' %}">
