--- a/e-learning/templates/registration/logged_out.html
+++ b/e-learning/templates/registration/logged_out.html
@@ -1,5 +1,8 @@
 {% extends "learning/base.html" %}
 {% load static %}
+{% block title %}
+<title>خروج</title>
+{% endblock %}
 {% block headerimg %}
 
 <img class="img-fluid" src="{% static 'pic/pexels-pixabay-301920.jpg' %}">
