--- a/e-learning/static_root/app/style.css
+++ b/e-learning/static_root/app/style.css
@@ -1,5 +1,5 @@
 body{
-background-color: #f7f7f7;
+background-color: #c50000;
 }
 .headerimgs{
 	width:100%;
@@ -22,4 +22,8 @@ background-color: #f7f7f7;
 }
 .card-a{
 	margin-top: 50px;
+}
+.btn-primary{
+    background-color: #850dfd;
+    border-color: #660fdb;
 }
