--- a/e-learning/templates/account/TklifProfileAdmin.html
+++ b/e-learning/templates/account/TklifProfileAdmin.html
@@ -1,5 +1,7 @@
 {% extends "account/base.html" %}
-
+{% block title %}
+  جواب تمرینات
+{% endblock %}
 {% block content %}
               <!-- /.card-body -->
               <div class="row">
