--- a/e-learning/templates/coursesales/article-create-update.html
+++ b/e-learning/templates/coursesales/article-create-update.html
@@ -1,14 +1,14 @@
 {% extends 'account/base.html' %}
 {% load crispy_forms_tags %}
 {% block title %}
-  افزودن|اپدیت فروش دوره
+ افزودن|امتحان
 {% endblock %}
 {% block content %}
 <div class="col-md-12">
   <!-- general form elements -->
   <div class="card card-primary">
     <div class="card-header">
-      <h3 class="card-title mb-0 float-left">{% block title-meta %}افزودن|اپدیت فروش دوره {% endblock %}</h3>
+      <h3 class="card-title mb-0 float-left">{% block title-meta %}افزودن|امتحان   {% endblock %}</h3>
     </div>
       <form method="post" enctype="multipart/form-data">
         <div class="card-body">
