--- a/e-learning/templates/coursesales/courselistview.html
+++ b/e-learning/templates/coursesales/courselistview.html
@@ -6,43 +6,49 @@
 {% endblock %}
 
 {% block content %}
-<br><br><br>
+<br><br><hr>
 <div class="container">
     <div class="row">
-        <div class="col-lg-5 col-md-6 p-3 ml-2 col-sm-1">
+        <div class="col-lg-4 mx-sm-4 col-md-4 p-3 ml-2 col-sm-1">
             <h3>درباره اموزشگاه</h3>
             <h6 class="text-muted">اموزشگاه مسیر رشد اموزشگاهی برای یادگیری زبان اینگلیسی و حرف زدن و یادگیری تمامی گرامر یکی از مزیت های اموزشگاه مسیر رشد استفاده از دانشجویان خود بعد از ارتقای سطح و یادگیری در حد لازم به معلمی و تدرس است</h6>
 
         </div>
-    <div class="col-lg-5 p-3 col-md-5 col-sm-1">
+    <div class="col-lg-3 p-3 col-md-4 col-sm-1">
         <h3>درباره یادگیری</h3>
         <h6 class="text-muted">یادگیری زبان مانند یادگیری کودک</h6>
         <h6 class="text-muted">اموزش اسپیکینگ</h6>
         <h6 class="text-muted">اموزش گرامر</h6>
         <h6 class="text-muted">اموزش تست زدن برای کنکور</h6>
+    </div>
+    <div class="col-lg-4 p-3 col-md-3 col-sm-1">
         <h4 class="">و از همه مهم تر</h4>
         <h6 class="text-muted">برگزاری کلاس های ttc و اموزش معلمی با مدرک معتبر برای تدرس و اموزش</h6>
     </div>
 </div>
 </div>
+<section class="mb-4">
+    <div class="container">
+        <br><br><h4 class="text-left">دوره های خریده شده</h4><hr>
+    <div class="row">
+    {% for courselist in object_list %}
 
-<div class="container">
-<br><br><h4>فیلم های اموزشی</h4><hr>
-<div class="container">
-	<div class="row p-2 mb-4">
-{% for courselist in object_list %}
-		<div class="col-sm-12 col-md-5 col-lg-3 mx-4 bg-white mb-2" style="box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;">
-			<h4 class="text-center mt-3">توضیحات</h4>
-			<hr>
-			<h6 class="mb-3 text-muted">نام استاد :  {{courselist.title}}</h6>
-			<h6 class="mb-3 text-muted">نام دوره : {{courselist.teachers}}</h6> 
-			<h6 class="mb-3 text-muted">سطح کلاس : {{courselist.level}}</h6>  
-			<h6 class="mb-3 text-muted">توضیحات : {{courselist.description|safe|truncatewords:5}}</h6>
-			<h6 class="mb-3 text-muted">قیمت دوره : {{courselist.price}}</h6>
-			<a href="{% url 'courseSales:CourseSalessDetail' courselist.slug %}" class="btn btn-primary btn-lg active mb-2">ادامه</a>
-		</div>
-		{% endfor %}
-	</div>
-</div>
-</div>
+    <div class="col-sm-12 col-md-3 col-lg-3">
+        <div class="card" style="box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px; width: auto; height: 250px; border-radius: 10px;">
+      <div class="card-body">
+        {% for courses in courselist.courses.all %}
+        <h6 class="mb-3 text-muted">نام استاد :  {{courses.title}}</h6>
+        <h6 class="mb-3 text-muted">نام دوره : {{courses.teachers}}</h6> 
+        <h6 class="mb-3 text-muted">سطح کلاس : {{courses.level}}</h6>  
+        <h6 class="mb-3 text-muted">قیمت دوره : {{courses.price}}</h6>
+        <a class="btn btn-primary btn-lg active" role="button" aria-pressed="true" href="{{courses.uploadcourse.url}}">دانلود</a>
+
+
+        {% endfor %}
+      </div>
+    </div>
+    </div>
+    {% endfor %}
+    </div>
+    </section>
 {% endblock %}
