--- a/e-learning/templates/learning/homes.html
+++ b/e-learning/templates/learning/homes.html
@@ -6,26 +6,25 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.rtlcss.com/bootstrap/v4.0.0/js/bootstrap.min.js" integrity="sha384-54+cucJ4QbVb99v8dcttx/0JRx4FHMmhOWi4W+xrXpKcsKQodCBwAvu3xxkZAwsH" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <section class="text-left mb-4">
+  <div class="container">
+  <div class="row">
 
-<section class="text-left mb-4">
-<div class="container">
-<div class="row">
+  {% for user in coursesal %}
+  <div class="col-sm-1 col-md-3 col-lg-3">
+      <div class="card" style="box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px; border-radius: 10px; width: auto; height: auto;">
+    <div class="card-body">
+      <h5 class="card-title mb-3">اسم دوره: {{user.title}}</h5>
+      <p class="card-text">نام مدرس : {{user.teachers|safe}}</p>
+      <p class="card-text">سطح: {{user.level}}</p>
+      <a href="{% url 'courseSales:CourseSalessDetail' user.slug %}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">توضیحات</a>
+    </div>
+  </div>
+  </div>
+  {% endfor %}
+  </div>
 
-{% for user in coursesal %}
-<div class="col-sm-1 col-md-3 col-lg-3">
-    <div class="card" style="box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px; border-radius: 10px; width: auto; height: 230px;">
-  <div class="card-body">
-    <h5 class="card-title mb-3">اسم دوره: {{user.title}}</h5>
-    <p class="card-text">نام مدرس : {{user.teachers|safe}}</p>
-    <p class="card-text">سطح: {{user.level}}</p>
-    <a href="{% url 'courseSales:CourseSalessDetail' user.slug %}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">توضیحات</a>
-   </div>
-</div>
-</div>
-{% endfor %}
-</div>
-
-</section>
+  </section>
 <div class="container">
 <a href="{% url 'courseSales:CourseSaless' %}" class="btn btn-primary mb-4 btn-lg active" role="button" aria-pressed="true">دیدن همه فیلم های اموزشی</a>
 </div>
