--- a/e-learning/templates/registration/RegistrationForm.html
+++ b/e-learning/templates/registration/RegistrationForm.html
@@ -1,69 +1,115 @@
 {% load static %}
-{% load crispy_forms_tags %}
-
-<!doctype html>
+{% load widget_tweaks %}
+<!DOCTYPE html>
 <html lang="fa" dir="rtl">
-  <head>
-  	<title>Login 10</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-
-
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<head>
+	<title>ثبت نام</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--===============================================================================================-->	
+	<link rel="icon" type="image/png" href="{% static 'login1/images/icons/favicon.ico' %}"/>
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="{% static 'login1/vendor/bootstrap/css/bootstrap.min.css' %}">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="{% static 'login1/fonts/font-awesome-4.7.0/css/font-awesome.min.css' %}">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="{% static 'login1/fonts/iconic/css/material-design-iconic-font.min.css' %}">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="{% static 'login1/vendor/animate/animate.css' %}">
+<!--===============================================================================================-->	
+	<link rel="stylesheet" type="text/css" href="{% static 'login1/vendor/css-hamburgers/hamburgers.min.css' %}">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="{% static 'login1/vendor/animsition/css/animsition.min.css' %}">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="{% static 'login1/vendor/select2/select2.min.css' %}">
+<!--===============================================================================================-->	
+	<link rel="stylesheet" type="text/css" href="{% static 'vendor/daterangepicker/daterangepicker.css' %}">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="{% static 'login1/css/util.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'login1/css/main.css' %}">
+<!--===============================================================================================-->
+</head>
+<body>
 	
-	<link rel="stylesheet" href="{% static 'login/css/styles.css' %}">
+	<div class="limiter">
+		{% if form.non_field_errors %}
+			<div class="myerrors">
+				{{form.non_field_errors.as_text}}
+			</div>
+		{% endif %}
+		<div class="container-login100">
+			<div class="wrap-login100">
+				<form class="login100-form validate-form" method="post">{% csrf_token %}
+					<span class="login100-form-title p-b-26 myfont">
+						ورود به سایت
+					</span>
+					<span class="login100-form-title p-b-48">
+						<i class="zmdi zmdi-font"></i>
+					</span>
 
-	</head>
-	<body class="img js-fullheight" style="background-image: url(/static/login/images/2.jpg);">
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-md-6 col-lg-4 mx-1">
-					<div class="login-wrap p-0">
-		      	<h3 class=" text-center">وارد شوید</h3>
-		      	<form action="#" class="signin-form" method="post">{% csrf_token %}
-		      		<div class="form-group text-right">
-								{{ user_form.username|as_crispy_field }}
-		      		<div class="form-group text-right">
-								{{ user_form.first_name|as_crispy_field }}
-		      		<div class="form-group text-right">
-								{{ user_form.email|as_crispy_field }}
-	      			    <div class="form-group text-right">
-	      			  {{ user_form.password|as_crispy_field }}
-	              <span toggle="#password-field" class="field-icon toggle-password"></span>
-	            </div>
-	      			    <div class="form-group text-right">
-	      			  {{ user_form.password2|as_crispy_field }}
-	              <span toggle="#password-field" class="field-icon toggle-password"></span>
-	            </div>
+					<div class="wrap-input100 validate-input" data-validate = "Valid email is: a@b.c">
+						{{user_form.username|add_class:"input100"}}
+						<span class="focus-input100" data-placeholder="نام کاربری"></span>
 
-	            <div class="form-group">
-	            	<button type="submit" class="form-control btn btn-primary submit px-3">ورود</button>
-	            </div>
-	            <div class="form-group d-md-flex">
-								<div class="text-md-right">
-								</div>
-							</div>
-	            </div>
-	          </form>
-		      </div>
-				</div>
+					</div>
+					<div class="wrap-input100 validate-input" data-validate = "Valid email is: a@b.c">
+						{{user_form.first_name|add_class:"input100"}}
+						<span class="focus-input100" data-placeholder="نام"></span>
+
+					</div>
+					<div class="wrap-input100 validate-input" data-validate = "Valid email is: a@b.c">
+						{{user_form.email|add_class:"input100"}}
+						<span class="focus-input100" data-placeholder="ایمیل"></span>
+
+					</div>
+
+
+					<div class="wrap-input100 validate-input">
+
+						{{user_form.password|add_class:"input100"}}
+						<span class="focus-input100" data-placeholder="گذرواژه"></span>
+					</div>
+					<div class="wrap-input100 validate-input" data-validate="Enter password">
+
+						{{user_form.password2|add_class:"input100"}}
+						<span class="focus-input100" data-placeholder="تکرار گذرواژه"></span>
+					</div>
+
+			
+					<a class="myfont" href="#">ورود</a>
+
+					<div class="container-login100-form-btn">
+						<div class="wrap-login100-form-btn">
+							<div class="login100-form-bgbtn"></div>
+							<button class="login100-form-btn myfont">
+								ورود
+							</button>
+						</div>
+					</div>
+				</form>
 			</div>
 		</div>
-	</section>
+	</div>
 
-	<script src="{% static 'login/js/jquery.min.js' %}"></script>
-  <script src="{% static 'login/js/popper.js' %}"></script>
-  <script src="{% static 'login/js/bootstrap.min.js' %}"></script>
-  <script src="{% static 'login/js/main.js' %}"></script>
 
-	</body>
+	<div id="dropDownSelect1"></div>
+	
+<!--===============================================================================================-->
+	<script src="{% static 'login1/vendor/jquery/jquery-3.2.1.min.js' %}"></script>
+<!--===============================================================================================-->
+	<script src="{% static 'login1/vendor/animsition/js/animsition.min.js' %}"></script>
+<!--===============================================================================================-->
+	<script src="{% static 'login1/vendor/bootstrap/js/popper.js' %}"></script>
+	<script src="{% static 'login1/vendor/bootstrap/js/bootstrap.min.js' %}"></script>
+<!--===============================================================================================-->
+	<script src="{% static 'login1/vendor/select2/select2.min.js' %}"></script>
+<!--===============================================================================================-->
+	<script src="{% static 'login1/vendor/daterangepicker/moment.min.js' %}"></script>
+	<script src="{% static 'login1/vendor/daterangepicker/daterangepicker.js' %}"></script>
+<!--===============================================================================================-->
+	<script src="{% static 'login1/vendor/countdowntime/countdowntime.js' %}"></script>
+<!--===============================================================================================-->
+	<script src="{% static 'login1/js/main.js' %}"></script>
+
+</body>
 </html>
-
